# fake-news-

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_project.bat
data/raw/: news.csv  testing_samples.csv
scripts/: batch_predict.py  model_report.py  run_api.py  run_local.ps1  setup.ps1  test_with_results.py  train.py
src/fakenews/: __init__.py
src/fakenews/api/: main.py
src/fakenews/app/: __init__.py  streamlit_app.py
src/fakenews/config/: __init__.py  settings.py
src/fakenews/data/: preprocess.py
src/fakenews/features/: __init__.py  vectorizer.py
src/fakenews/models/: evaluate.py  explain.py  predict.py  registry.py  train.py
src/fakenews/utils/: io.py  logger.py
tests/: test_predict.py  test_preprocess.py
